src/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>AssetURL__c</fullName>
        <formula>LEFT( $Api.Partner_Server_URL_230 , FIND(&apos;services/Soap/c/23.0&apos;, $Api.Enterprise_Server_URL_230) -1) &amp; Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AssetURL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Description__c</fullName>
        <inlineHelpText>Enter description of Asset</inlineHelpText>
        <label>Asset Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Asset_Location_911__c</fullName>
        <inlineHelpText>See install details in secure folder for additional information on asset location</inlineHelpText>
        <label>Asset Location (911)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - PSAP</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_Total_Price__c</fullName>
        <label>Asset Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Asset_Version__c</fullName>
        <label>Asset Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Activated_WMP__c</fullName>
        <label>Date Activated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expired_Date_WMP__c</fullName>
        <label>Expired Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extended_Net_Price__c</fullName>
        <label>Extended Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>List_Price_Per_Unit__c</fullName>
        <label>List Price Per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family_WMP__c</fullName>
        <formula>Text( Product_WMP__r.Family )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Sub-Module</label>
        <referenceTo>Product_Sub_Module__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_WMP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_WMP__c</fullName>
        <label>Asset Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <label>Sales Order #</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Serial_Number_WMP__c</fullName>
        <label>Serial Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Price__c</fullName>
        <label>Support Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Under_Maintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This Asset is covered under support maintenance</inlineHelpText>
        <label>Under Maintenance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warranty__c</fullName>
        <label>Warranty</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>180</fullName>
                </value>
                <value>
                    <fullName>1yr</fullName>
                </value>
                <value>
                    <fullName>2yr</fullName>
                </value>
                <value>
                    <fullName>3yr</fullName>
                </value>
                <value>
                    <fullName>5yr</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X911_Asset_Vendor__c</fullName>
        <label>Asset Vendor (911)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cerium</fullName>
                </value>
                <value>
                    <fullName>Cheetah</fullName>
                </value>
                <value>
                    <fullName>Dell</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>Infranet</fullName>
                </value>
                <value>
                    <fullName>Insight</fullName>
                </value>
                <value>
                    <fullName>Stancil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Family_WMP__c</field>
            <operation>equals</operation>
            <value>IMC</value>
        </filters>
        <label>IMC Assets</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>